hphp/test/slow/strict/array_fill_keys_hh_syntax.php.expectf
Fatal error: keys must be ints or strings in %s/test/slow/strict/array_fill_keys_hh_syntax.php on line 9
